@@ -6,6 +6,10 @@ Not yet released - available from CVS or in the latest snapshot:
 
 Enhancements: 
 
+"Copy as SQL WHERE / UPDATE-SET statement" function in tables
+  Tables offer right mouse menu to copy WHERE or UPDATE-SET clauses of selected data to clip board.
+  Works like the exisiting "Copy as SQL IN statment" function.
+
  - New Plugin: SQLReplace by Dieter Engelhardt
    This plugin replaces a set of variables before a statement is executed.
    The variables to replace can be defined at the Plugin's Global Preferences tab.  
